[package]
name = "muddles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-mud = { path = "./parser/tree-sitter-mud/" }
tower-lsp = "0.17.0"
tokio = { version = "1.20.0", features = ["full"] }
tree-sitter = "~0.20"
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0"
chrono = "0.4.19"
